fix alignment mobile on table flight

--- a/assets/styles/templates/partenze-arrivi.scss
+++ b/assets/styles/templates/partenze-arrivi.scss
@@ -43,6 +43,11 @@
 					text-align: left;
 				}
 
+				@include respond-to($retina1) {
+					/* mod staging 09-23 */
+					flex-basis: 15%;
+				}
+
 				&:nth-child(3) {
 					@include respond-to($small-tablet) {
 						/* new style 09-23 */
@@ -127,7 +132,7 @@
 
 					@include respond-to($retina1) {
 						/* mod staging 09-23 */
-						flex-basis: 15.5%;
+						flex-basis: 11.5%;
 					}
 				}
 			}
@@ -171,7 +176,7 @@
 					// right: 20px;
 					z-index: 99;
 					/* new style 09-23 */
-					bottom: 10px;
+					bottom: 40%;
 					right: -2px;
 				}
 
@@ -192,16 +197,15 @@
 					@include respond-to($small-phone) {
 						// padding-left: 25px !important;
 						/* new style 09-23 */
-						flex-basis: 22%;
-						margin-right: -40px;
+						flex-basis: 7%;
+						margin-right: -30px;
 						margin-left: 0px;
 					}
 
 					@include respond-to($mid-phone) {
 						/* new style 09-23 */
-						flex-basis: 21%;
-						margin-right: -40px;
-						margin-left: 6px;
+						flex-basis: 15%;
+						margin-right: -28px;
 					}
 
 					@include respond-to($phone) {
@@ -305,6 +309,7 @@
 								// margin-left: 22px;
 								/* new style 09-23 */
 								height: 17px;
+								margin-right: 24px;
 							}
 
 							i {
@@ -349,7 +354,7 @@
 						margin: 0;
 						/* new style 09-23 */
 						padding: 7px 0;
-						flex-basis: 48%;
+						flex-basis: 60%;
 					}
 
 					@include respond-to($small-tablet) {
@@ -375,6 +380,11 @@
 					}
 
 					.info {
+						@include respond-to($phone) {
+							/* new style 09-23 */
+							padding: 0 !important;
+						}
+
 						@include respond-to($min-desktop) {
 							display: flex;
 							flex-wrap: wrap;
@@ -399,15 +409,10 @@
 							/* new style 09-23 */
 							flex-basis: 100%;
 
-							@include respond-to($small-phone) {
-								/* new style 09-23 */
-								font-size: 15px;
-							}
-
 							@include respond-to($phone) {
 								display: flex;
 								/* new style 09-23 */
-								font-size: 17px;
+								font-size: 15px;
 							}
 	
 							.acronym {
@@ -502,8 +507,9 @@
 						/* new style 09-23 */
 						order: 4;
 						padding: 8px 0 0;
-						flex-basis: 15%;
+						flex-basis: 12%;
 						align-items: flex-start;
+						justify-content: flex-start;
 					}
 
 					@include respond-to($tablet) {
@@ -564,7 +570,8 @@
 						align-items: flex-start;
   						padding-top: 9px;
 						font-size: 13px;
-						flex-direction: column;
+						justify-content: flex-end;
+    					flex-basis: 100%;
 					}
 				}
 			}
